# stpstone

./: .actrc  .codespellrc  .coverage  .env.example  .env.usage.md  .gitignore  .pre-commit-config.yaml  .pydocstyle  =  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  UNIT_TEST_TEMPLATE.md  bcb_page_debug.html  check_import.py  mkdocs.yml  pkg_version.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prd.txt  requirements-prod.txt  requirements-venv.txt  requirements.txt  ruff.toml  run_dist.py  setup.py  test_package_locally.py
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
cals/: br_bzdays.py  handling_dates.py
charts/: prob_and_stats.py  tsir.py
cli/: act_install.sh  act_tests.sh  bump_version.sh  cc_ingestion_html_parser_py.sh  cc_ingestion_py.sh  check_unix_filenames.sh  create_req_cls_py.sh  create_req_yaml.sh  create_ssh_key.sh  export_deps.sh  gh_set_pypi_secret.sh  git_create_branch_from_main.sh  git_delete_current_branch.sh  git_delete_dev_branches.sh  git_keep_just_main.sh  git_keep_just_main_builds.sh  git_merge_branches.sh  git_protect_main.sh  git_pull_force.sh  git_update_branch_with_main.sh  html_parser_create_req_cls_py.sh  html_parser_create_req_yaml.sh  test_dist.sh  test_feature.sh  test_pypi_publish.sh  upload_test_pypi.sh  vscode_setup.sh
cloud_clients/: aws_s3.py
containers/: check_pypi  check_test_pypi  test_pypi
data/: .~lock.world_gov_bonds_20250514.csv#  .~lock.yahii-pmi-rf-rates-filtered_20250512_070832.xlsx#  consolidated-investment-funds-bylaws-infos_guilhermegor_20250521_190030.csv  cvm-securities-consultants_20250302_113353.xlsx  cvm-securities-consultants_20250302_113551.xlsx  cvm-securities-consultants_20250302_113703.xlsx  enhanced_features_doc.md  html-mais-retorno-avl-funds_20250515_065525.html  html-mais-retorno-avl-funds_20250515_065556.html  html-mais-retorno-avl-funds_20250515_070045.html  html-mais-retorno-avl-funds_20250515_070201.html  html-mais-retorno-avl-funds_20250515_070321.html  html-mais-retorno-avl-funds_20250515_070436.html  html-mais-retorno-avl-funds_20250515_070556.html  html-mais-retorno-avl-funds_20250515_072354.html  html-mais-retorno-avl-funds_20250515_073100.html  html-mais-retorno-avl-funds_20250515_073129.html  (+69 more)
(+1935 files in other folders)
