[tool.poetry]
name = "stpstone"
version = "1.0.1"
description = ""
authors = ["Guilherme Rodrigues <55053188+guilhermegor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
pyyaml = "6.0.2"
pyodbc = "5.2.0"
workalendar = "17.0.0"
pytz = "2025.1"
python-dateutil = "2.9.0.post0"
more-itertools = "10.6.0"
businesstimedelta = "1.0.1"
pandas = "2.2.3"
pathlib = "1.0.1"
backoff = "2.2.1"
numpy = "2.2.2"
seaborn = "0.13.2"
statsmodels = "0.14.4"
scikit-learn = "1.6.1"
boto = "2.49.0"
keyring = "25.6.0"
pycurl = "7.45.4"
wget = "3.2"
requests = "2.32.3"
py7zr = "0.22.0"
validate-docbr = "1.10.0"
asyncio = "3.4.3"
investpy = "1.0.8"
yfinance = "0.2.52"
nelson-siegel-svensson = "0.5.0"
cvxopt = "1.3.2"
plotly = "6.0.0"
bs4 = "0.0.2"
numpy-financial = "1.0.0"
urllib3 = "2.3.0"
lxml = "^4.9.3"
selenium = "4.28.1"
joblib = "1.4.2"
pypdf = "5.2.0"
tabula-py = "^2.10.0"
ftfy = "6.3.1"
basicauth = "1.0.0"
unidecode = "1.3.8"
pywin32 = {version = "308", platform = "win32"}
xlwt = "1.3.0"
pymsteams = "0.2.5"
psycopg = "3.2.4"
sqlalchemy = "2.0.37"
sympy = "1.13.3"
mlxtend = "0.23.4"
sendgrid = "6.11.0"
slack = "^0.0.2"
pymysql = "1.1.1"
mystic = "^0.4.3"
yahooquery = "^2.3.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"
build = "^1.2.2.post1"
twine = "^6.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^6.0.0"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.1"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src/stpstone", "test"]
honor_noqa = true
line_length = 79

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.2"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
]

[tool.taskipy.tasks]
pre_test = "task lint"
test_cov = "pytest -s -x --cov=src/stpstone -vv"
test = "pytest -s -x -vv"
post_test = "coverage html"
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
